tests/ui/rfcs/rfc-2093-infer-outlives/explicit-enum.stderr
error: rustc_outlives
  --> $DIR/explicit-enum.rs:4:1
   |
LL | enum Foo<'a, U> {
   | ^^^^^^^^^^^^^^^
   |
   = note: U: 'a

error: aborting due to 1 previous error

