tests/ui/rfcs/rfc-2093-infer-outlives/explicit-enum.rs
#![feature(rustc_attrs)]

#[rustc_outlives]
enum Foo<'a, U> { //~ ERROR rustc_outlives
    One(Bar<'a, U>)
}

struct Bar<'x, T> where T: 'x {
    x: &'x (),
    y: T,
}

fn main() {}
